--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-resource": "^1.5.8",
+    "angular-ui-bootstrap": "^2.1.4",
+    "cbp-theme": "^0.4.0",
     "express": "^4.14.0"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-jshint": "^2.0.1",
+    "gulp-load-plugins": "^1.3.0",
+    "gulp-sass": "^2.3.2",
+    "jshint": "^2.9.3",
+    "jshint-stylish": "^2.2.1",
     "node-sass": "^3.9.3",
     "nodemon": "^1.10.2",
     "sass-loader": "^4.0.1",
