--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular": "^1.5.8",
     "angular-resource": "^1.5.8",
     "angular-ui-bootstrap": "^2.1.4",
+    "angular-ui-mask": "^1.8.7",
     "cbp-theme": "^0.4.0",
     "express": "^4.14.0"
   },
