--- a/package.json
+++ b/package.json
@@ -18,15 +18,23 @@
     "express": "^4.14.0"
   },
   "devDependencies": {
+    "angular-mocks": "^1.6.0",
+    "browserify": "^13.1.1",
     "gulp": "^3.9.1",
     "gulp-jshint": "^2.0.1",
     "gulp-load-plugins": "^1.3.0",
     "gulp-sass": "^2.3.2",
+    "jasmine-core": "^2.5.2",
     "jshint": "^2.9.3",
     "jshint-stylish": "^2.2.1",
+    "karma": "^1.3.0",
+    "karma-browserify": "^5.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.0.2",
     "node-sass": "^3.9.3",
     "nodemon": "^1.10.2",
     "sass-loader": "^4.0.1",
+    "watchify": "^3.7.0",
     "webpack": "^1.13.2"
   }
 }
