--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "MIT",
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-animate": "^1.6.0",
     "angular-resource": "^1.5.8",
     "angular-ui-bootstrap": "^2.1.4",
     "angular-ui-mask": "^1.8.7",
+    "angular-ui-router": "^0.3.2",
     "cbp-theme": "^0.4.0",
     "express": "^4.14.0"
   },
