--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "angular-ui-bootstrap": "^2.1.4",
     "angular-ui-mask": "^1.8.7",
     "angular-ui-router": "^0.3.2",
+    "animate.css": "^3.5.2",
     "cbp-theme": "^0.4.0",
     "express": "^4.14.0"
   },
